# aria-agent

./: .env.example  .gitignore  .mcp.json  AI.md  ARIA_ISSUES_ANALYSIS.md  CLAUDE.md  DAEMON_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  Launch Aria.command  README.md  aria_launcher.py  chat.py  com.aria.daemon.plist  com.aria.launcher.plist  install_daemon.sh  install_launcher.sh  install_qwen_hybrid.sh  pyproject.toml  requirements.txt  run_mcp_server.py  run_mcp_wrapper.sh  test_claude_find_element.py  test_consistency.py  test_coordinate_accuracy.py  test_dock_slow.py  test_learning.py  test_qwen_hybrid.py  uninstall_launcher.sh  venv
aria/: __init__.py  action_executor.py  agent.py  clarification.py  claude_bridge.py  claude_computer_use.py  claude_main.py  config.py  control.py  daemon.py  daemon_api.py  gemini_voice.py  gestures.py  hybrid_voice.py  intent.py  lazy_anthropic.py  learning.py  main 2.py  main.py  mcp_client.py  mcp_server.py  memory.py  memory_v2.py  notifications.py  planner.py  qwen_voice.py  realtime_voice.py  reasoning.py  scheduler.py  task_classifier.py  tool_search.py  vision.py  voice.py  voice_mode.py  wake_word.py
aria/accessibility/: __init__.py  actions.py  apps.py  elements.py
aria/agents/: __init__.py  base.py  browser_agent.py  code_agent.py  coordinator.py  file_agent.py  system_agent.py
aria/ambient/: __init__.py  constants.py  integration.py  loop.py  models.py  relevance.py  storage.py  world_manager.py
docs/: AMBIENT_IMPLEMENTATION_TASKS.md  AMBIENT_INTELLIGENCE_PRD.md
research/: capability_research.md
(+47 files in other folders)
